--- a/index.html
+++ b/index.html
@@ -212,9 +212,8 @@ tw-icon[title="Redo"] {
 
 &#39;&#39;本課學習目標&#39;&#39;
 * 生詞：新年常見的食物
-* 語法：&#39;&#39;代表/象徵/&#39;&#39;
 * 任務：正確完成新年食物採買
-* 應用：根據祝福的內容，選擇正確的食物，並說出吉祥話
+* 任務：正確配對食物與對應的祝福或吉祥話內容
 
 [[開始：生詞|生詞]]
 [[開始：生詞-吉祥話|生詞-吉祥話]]
@@ -668,6 +667,7 @@ Instructions and Button Guide:
   height=&quot;800&quot; 
   style=&quot;border:1px solid #ccc;&quot;&gt;
 &lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="86" name="食物與吉祥話" tags="" position="425,525" size="100,100">(display:&quot;UI-Nav&quot;)
+
 &lt;iframe 
   src=&quot;https://yyyy-n.github.io/matching-FoodLuckyWord/&quot; 
   width=&quot;120%&quot; 
